[package]
name = "Market_Analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"
serde = { version = "1.0.136", features = ["derive"] }
num-traits = "0.2.14"
conv = "0.3.3"
itertools = "0.10.2"